GS-12407: IE7 Light box issue - Fixed IE7 z-indexing issue with dc photo and article's light box.

--- a/src/webapp/res/css/gs2010_IEstyles.css
+++ b/src/webapp/res/css/gs2010_IEstyles.css
@@ -95,6 +95,7 @@ body.ie7 #navbar, *+html #navbar {
 
 body.ie7 #mainWrap, *+html #mainWrap {
     z-index: 1;
+    position: relative;
 }
 
 body.ie7 #navbar #topnav_menusubnav .nav_menu, *+html #navbar #topnav_menusubnav .nav_menu {
