--- a/src/webapp/res/css/gs2010_styles.css
+++ b/src/webapp/res/css/gs2010_styles.css
@@ -1194,7 +1194,7 @@ body.ie8 .btsSupplyListsTag .arrow {
     position: absolute;
     top: -150px;
     width: 530px;
-    left: 244px;
+    left: 218px;
     z-index: 1002;
 }
 
